# pylinearcode

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pylinearcode/: __init__.py  __main__.py  bounds.py  cli.py  constructors.py  enumerators.py  exceptions.py  fields.py  linear_code.py  matrix.py  polynomials.py
tests/: test_core.py
