[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pylinearcode"
version = "0.2.0"
description = "Pure-Python finite-field linear-code algorithms with a Magma-inspired API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "PyLinearCode contributors" }
]
keywords = ["coding-theory", "linear-codes", "finite-fields", "magma", "sagemath"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
pylinearcode = "pylinearcode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pylinearcode"]

[tool.ruff]
line-length = 100
target-version = "py310"
